Update info card style and markup to prevent modal mask from blurring

--- a/app/styles/_information-card.scss
+++ b/app/styles/_information-card.scss
@@ -115,7 +115,7 @@
 
 // While the information card is loading, hide the scrollbars and blur content
 .information-card--is-loading {
-  .information-card__body {
+  .information-card__content {
     filter: blur(2px);
   }
 }
